@@ -12,6 +12,10 @@ with their complete changes, see the AUTHORS file.
 
 * Changes in Cdecl 14.1
 
+** Alternative token reference functions
+Reference and rvalue reference functions now correctly print alternative tokens
+when the option is enabled.
+
 ** Alternative tokens vs. di/trigraphs
 If both alternative token and either di/trigraph options are set, alternative
 tokens now have priority.
